[package]
name = "coco-provider"
version = "0.2.0"
edition = "2021"

[lib]
name = "coco_provider"
crate-type = ["rlib", "cdylib"]

[features]
default = ["configfs", "legacy", "tpm"]
tpm = ["dep:tss-esapi"]
configfs = ["dep:sev"]
legacy = ["dep:sev", "dep:openssl"]
clib = ["configfs", "legacy", "tpm", "dep:once_cell"]

[build-dependencies]
cbindgen = "0.28.0"

[profile.release]
lto = true

[dependencies]
rand = "0.8.5"
log = "0.4.25"
serde = "1.0.217"
serde-big-array = "0.5.1"
bincode = "1.3.3"
sysinfo = "0.33.1"
sev = { version = "5.0.0", default-features = false, features = ['openssl','snp'], optional = true}
openssl = { version = "^0.10", features = ["vendored"], optional = true}
users = "0.11.0"
tss-esapi = {version = "7.6", optional = true}

once_cell = { version = "1.20.2", optional=true }
